# my-package-name

./: .copier-answers.yml  .pre-commit-config.yaml  CITATION.cff  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: deploy_docs.yml  test_code.yml
docs/: index.md  my-first-page.md
src/reproducability_course_phd/: __init__.py  docs_handson.py  main.py
src/reproducability_course_phd/auto/: project_info.py  run_tests.py
src/reproducability_course_phd/notebooks/: auto_handson.ipynb
tests/: test_main.py
